# beldex-testnet-faucet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
faucet-helpers/: CMakeLists.txt  faucet-helpers.cpp  faucet-helpers.h
frontend/: index.html
frontend/css/: styles.css
frontend/js/: script.js
